<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0ffff"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/photo_fliper"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="@dimen/dp_10" />

        <TextView
            android:id="@+id/DetailTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <RelativeLayout
            android:id="@+id/news_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <ImageView
                        android:id="@+id/news_image_a_1"
                        android:layout_width="320dp"
                        android:layout_height="120dp"
                        android:layout_margin="@dimen/dp_30"
                        android:background="@drawable/jayphoto" />

                    <TextView
                        android:id="@+id/name_jay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_image_a_1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/jay_name"
                        android:textSize="@dimen/dp_20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/jay_rollno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_jay"
                        android:layout_centerHorizontal="true"
                        android:text="@string/jay_roll"
                        android:textSize="@dimen/dp_20" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/news_image_a_2"
                        android:layout_width="320dp"
                        android:layout_height="120dp"
                        android:layout_margin="@dimen/dp_30"
                        android:layout_weight="1"
                        android:background="@drawable/tapephoto" />

                    <TextView
                        android:id="@+id/name_tape"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/news_image_a_2"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tape_name"
                        android:textSize="@dimen/dp_20"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tape_rollno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_tape"
                        android:layout_centerHorizontal="true"
                        android:text="@string/tape_roll"
                        android:textSize="@dimen/dp_20" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">


                <ImageView
                    android:id="@+id/news_image_b_1"
                    android:layout_width="320dp"
                    android:layout_height="120dp"
                    android:layout_margin="@dimen/dp_30"

                    android:background="@drawable/bharatphoto" />

                <TextView
                    android:id="@+id/name_bharat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/news_image_b_1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bharat_name"
                    android:textSize="@dimen/dp_20"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bharat_rollno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_bharat"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bharat_roll"
                    android:textSize="@dimen/dp_20" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/news_image_b_2"
                    android:layout_width="320dp"
                    android:layout_height="120dp"
                    android:layout_margin="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/nirajanphoto" />

                <TextView
                    android:id="@+id/name_nitajan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/news_image_b_2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/name_nirajan"
                    android:textSize="@dimen/dp_20"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nirajan_rollno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_nitajan"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nirajan_roll" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/CopyrightTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dp_20"
            android:text="@string/copyright"
            android:textAlignment="center"
            android:textSize="15dp" />
    </LinearLayout>
</ScrollView>